First draft complete

--- a/Frontmatter/frontmatter.tex
+++ b/Frontmatter/frontmatter.tex
@@ -1,24 +1,54 @@
-%% Title Page
-\titlepage[\vspace{0.5cm} University College London]{%
-Submitted to University College London in fulfilment
-of the requirements for the award of the
-degree of Doctor of Philosophy
-}
+%%-----Title Page
 
-%% Abstract
-\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
-  %\thispagestyle{empty}
-  \LHCb is a \bphysics detector experiment which will take data at
-  the \unit{14}{\TeV} \LHC accelerator at \CERN from 2007 onward\dots
+\title{Background and sensitivity studies for \\ \vspace{0.8cm} \\ the LUX-ZEPLIN experiment}
+\author{\textbf{Umit Utku}}
+
+\vspace*{-4.0cm}
+\titlepage[
+    \vspace{0.5cm} 
+    \large
+    Department of Physics \& Astronomy \\ 
+    \vspace{0.3cm} 
+    \large
+    University College London]
+    {%
+    \vspace{-6.5cm}
+    \begin{figure}[ht!]
+	    \centering
+	    \includegraphics[width=0.32\linewidth]{Frontmatter/ucl_logo.jpg}
+    \end{figure}
+    \vspace{1cm}
+    \large
+    Thesis submitted for the degree of \\ \textit{Doctor of Philosophy} in the subject of \textit{Physics} \\
+    \vspace{0.5cm} 
+    \large
+    October 2020
+    }
+
+
+
+
+%%-----Abstract
+\begin{abstract}
 \end{abstract}
+\bigskip
+\vspace{-0.8cm}
+The existence of dark matter is now supported by a wide range of physical observations, ranging from galactic to cosmological scales. Our best cosmological models predict dark matter to make up 85\% of the matter-content of the universe. One of the leading particle candidates that can effectively explain cosmological observations is the Weakly Interacting Massive Particles (WIMPS), the presence of which can be directly searched for by rare-event underground experiments via its scattering off atomic nuclei. By deploying a multi-tonne dual-phase liquid xenon (LXe) detector, the LUX-ZEPLIN (LZ) experiment, currently under construction in the Davis Campus at the Sanford Underground Research Facility (South Dakota, USA), is projected to reach unprecedented sensitivities in search for WIMPs.
 
-%% Acknowledgements
+In probing deeper into the WIMP landscape, an extensive screening and cleanliness campaign was envisioned, selecting some of the most radio-pure material for the construction of LZ. This work highlights some of the cutting-edge techniques used in modeling for a wide range of backgrounds, focusing primarily on measuring and modeling the radon emanation background projections. By using the LZ simulation and statistical inference frameworks, the impact of radon emanation across different background scenarios ate examined, where the 90\% CL sensitively is determined to very from $1.34\times10^{-48} \; \MathText{cm}^{2}$ to $1.76\times10^{-48} \; \MathText{cm}^{2}$ at radon activities of 11.0 mBq and 60.4 mBq, respectively---remaining well below LZ requirement of $3.0\times10^{-48} \; \MathText{cm}^{2}$. Furthermore, the projected LZ sensitivity for a WIMP mass of 40 GeV/c\squared{}, at a 90\% CL and the 3\sigma discovery potential was determined to be $1.43\times10^{-48} \; \MathText{cm}^{2}$ and $3.4\times10^{-48} \; \MathText{cm}^{2}$.
+
+The projected limits from second-generation detectors leave a significant amount of the parameter space prior to the cosmic neutrino floor ($\sim10^{-49} \; \MathText{cm}^{2}$) unexplored. In envisioning what a future third-generation detector may hold and examine the background necessities of such detector, a toy G3 experiment is presented and a cryogenic radon facility currently under construction is outlined to pave the way for a dual-phase LXe observatory.
+
+
+%%-----Acknowledgements
 \begin{acknowledgements}
-  Of the many people who deserve thanks, some are particularly prominent,
-  such as my supervisor\dots
+
+I thank myself for somehow managing to write an entire thesis and apologise to myself for making it difficult in any and all events of the past.
+
 \end{acknowledgements}
 
-%% Declaration
+
+%%-----Declaration
 \begin{declaration}
   This dissertation is the result of my own work, except where explicit
   reference is made to the work of others, and has not been submitted
