--- a/Style/symbol-commands.tex
+++ b/Style/symbol-commands.tex
@@ -4,7 +4,7 @@
 \newcommand \kevnr{$keV_{nr}$}
 \newcommand \uBqms{\micro{}Bq/m$^{2}$}
 \newcommand \mBqms{mBq/m$^{2}$}
-
+\newcommand \uBqkg{\micro{}Bq/kg}
 
 %% Types of interactions %%
 %%-----------------------%%
@@ -111,6 +111,11 @@
 \newcommand \UandTe{($^{238}$U \& $^{232}$Th)$_{e}$}
 \newcommand \UandTl{($^{238}$U \& $^{232}$Th)$_{l}$}
 
+
+%% Chemicals
+\newcommand \alumina{Al$_{2}$O$_{3}$}
+\newcommand \nitrogen{N$_{2}$}
+
 %% From Screening Paper
 \newcommand \effn{$Eff_{\mathrm{n}}$}
 \newcommand \garrn{$Garr_{\mathrm{n}}$}
@@ -168,6 +173,8 @@
 \newcommand \utTT{$^{233}$U}
 \newcommand \geant{\textsc{Geant4}}
 \newcommand \dbd{$0\mathrm{\nu\beta\beta}$}
+
+
 
 %% Math Mode Commands %%
 %%-----------------------%%
