--- a/mythesis.bib
+++ b/mythesis.bib
@@ -2779,3 +2779,167 @@ year = {1997}
     pages = "251302",
     year = "2017"
 }
+
+
+%%---------------------%%
+%%----- CHAPTER 7 -----%%
+%%---------------------%%
+
+% Xenon 100 radon
+@article{Aprile:2012nq,
+    author = "Aprile, E. and others",
+    collaboration = "XENON100",
+    title = "{Dark Matter Results from 225 Live Days of XENON100 Data}",
+    eprint = "1207.5988",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevLett.109.181301",
+    journal = "Phys. Rev. Lett.",
+    volume = "109",
+    pages = "181301",
+    year = "2012"
+}
+
+% Radon in LUX
+@article{Akerib:2013tjd,
+    author = "Akerib, D.S. and others",
+    collaboration = "LUX",
+    title = "{First results from the LUX dark matter experiment at the Sanford Underground Research Facility}",
+    eprint = "1310.8214",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevLett.112.091303",
+    journal = "Phys. Rev. Lett.",
+    volume = "112",
+    pages = "091303",
+    year = "2014"
+}
+
+% Radon in PandaX-I
+@article{Xiao:2014xyn,
+    author = "Xiao, Mengjiao and others",
+    collaboration = "PandaX",
+    title = "{First dark matter search results from the PandaX-I experiment}",
+    eprint = "1408.5114",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    doi = "10.1007/s11433-014-5598-7",
+    journal = "Sci. China Phys. Mech. Astron.",
+    volume = "57",
+    pages = "2024--2030",
+    year = "2014"
+}
+
+% Radon in XMASS
+@article{Abe:2013tc,
+    author = "Abe, K. and others",
+    title = "{XMASS detector}",
+    eprint = "1301.2815",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1016/j.nima.2013.03.059",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "716",
+    pages = "78--85",
+    year = "2013"
+}
+
+% Radon in EXO-200
+@article{Albert:2015nta,
+    author = "Albert, J.B. and others",
+    title = "{Investigation of radioactivity-induced backgrounds in EXO-200}",
+    eprint = "1503.06241",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1103/PhysRevC.92.015503",
+    journal = "Phys. Rev. C",
+    volume = "92",
+    number = "1",
+    pages = "015503",
+    year = "2015"
+}
+
+% Mutli-tonne xenon detectors
+@article{Schumann:2015cpa,
+    author = {Schumann, Marc and Baudis, Laura and B\"utikofer, Lukas and Kish, Alexander and Selvi, Marco},
+    title = "{Dark matter sensitivity of multi-ton liquid xenon detectors}",
+    eprint = "1506.08309",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1088/1475-7516/2015/10/016",
+    journal = "JCAP",
+    volume = "10",
+    pages = "016",
+    year = "2015"
+}
+
+% DARWIN
+@article{Aalbers:2016jon,
+    author = "Aalbers, J. and others",
+    collaboration = "DARWIN",
+    title = "{DARWIN: towards the ultimate dark matter detector}",
+    eprint = "1606.07001",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.IM",
+    doi = "10.1088/1475-7516/2016/11/017",
+    journal = "JCAP",
+    volume = "11",
+    pages = "017",
+    year = "2016"
+}
+
+% Swing absorbtion
+@article{Street:2017bde,
+    author = "Street, Joseph and Bunker, R. and Miller, E.H. and Schnee, R.W. and Snyder, S. and So, J.",
+    editor = "Leonard, Douglas S.",
+    title = "{Radon Mitigation for the SuperCDMS SNOLAB Dark Matter Experiment}",
+    eprint = "1708.08535",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1063/1.5018995",
+    journal = "AIP Conf. Proc.",
+    volume = "1921",
+    number = "1",
+    pages = "050002",
+    year = "2018"
+}
+
+% Development of CREF radon detector
+@article{Hosokawa:2015koa,
+    author = "Hosokawa, K. and Murata, A. and Nakano, Y. and Onishi, Y. and Sekiya, H. and Takeuchi, Y. and Tasaka, S.",
+    title = "{Development of a high-sensitivity 80 L radon detector for purified gases}",
+    doi = "10.1093/ptep/ptv018",
+    journal = "PTEP",
+    volume = "2015",
+    number = "3",
+    pages = "033H01",
+    year = "2015"
+}
+
+% New radon detector use with Super-K
+@article{Nakano:2017rsy,
+    author = "Nakano, Y. and Sekiya, H. and Tasaka, S. and Takeuchi, Y. and Wendell, R.A. and Matsubara, M. and Nakahata, M.",
+    title = "{Measurement of Radon Concentration in Super-Kamiokande's Buffer Gas}",
+    eprint = "1704.06886",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1016/j.nima.2017.04.037",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "867",
+    pages = "108--114",
+    year = "2017"
+}
+
+% Cold radon emanation
+@article{cold_radon_measurements,
+    author = {Sebastian Lindemann, Hardy Simgen, and Grzegorz Zuzel},
+    title = {Behaviour of 222Rn at cryogenic temperatures},
+    journal = {AIP Conference Proceedings},
+    volume = {1338},
+    number = {1},
+    pages = {156-160},
+    year = {2011},
+    doi = {10.1063/1.3579574},
+    URL = {https://aip.scitation.org/doi/abs/10.1063/1.3579574},
+    eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.3579574}
+}
